src/packages/default/CoreWM/main.css
/* ... */
corewm-panel-item {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;

  box-sizing : border-box;

  -webkit-flex: 0 0 auto;
     -moz-flex: 0 0 auto;
      -ms-flex: 0 0 auto;
       -o-flex: 0 0 auto;
          flex: 0 0 auto;
}

corewm-panel-item.corewm-panel-expand {
  -webkit-flex: 1 1 auto;
     -moz-flex: 1 1 auto;
      -ms-flex: 1 1 auto;
       -o-flex: 1 1 auto;
          flex: 1 1 auto;
}
corewm-panel-item.corewm-panel-right {
  -webkit-justify-content : flex-end;
     -moz-justify-content : flex-end;
      -ms-justify-content : flex-end;
       -o-justify-content : flex-end;
          justify-content : flex-end;
}

  corewm-panel-item .corewm-panel-buttons {
    list-style : none;
    margin : 0;
    padding : 0;
    position : relative;
    z-index : 10;
    box-sizing : border-box;

    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;

    -ms-flex-align: center;

    -webkit-align-items: center;
       -moz-align-items: center;
            align-items: center;
  }
    corewm-panel-item .corewm-panel-buttons > li {
      margin : 0;
      padding : 0;
      box-sizing : border-box;
      position : relative;
      min-width : 16px;
      min-height : 16px;

      display: -webkit-box;
      display: -moz-box;
      display: -ms-flexbox;
      display: -webkit-flex;
      display: flex;

      -webkit-flex: 1 1 auto;
         -moz-flex: 1 1 auto;
          -ms-flex: 1 1 auto;
           -o-flex: 1 1 auto;
              flex: 1 1 auto;


      justify-content: center;

      -ms-flex-align: center;

      -webkit-align-items: center;
         -moz-align-items: center;
              align-items: center;

      -webkit-box-align: center;
         -moz-box-align: center;
    }
    corewm-panel-item .corewm-panel-buttons:first-child {
      margin-right : 0;
      margin-top : 0;
    }
    corewm-panel-item .corewm-panel-buttons:last-child {
      margin-right : 0;
      margin-bottom : 0;
    }
      corewm-panel-item .corewm-panel-buttons > li > img {
        display : inline-block;
      }

      corewm-panel-item .corewm-panel-buttons > li > img,
      corewm-panel-item .corewm-panel-buttons > li > span {
        pointer-events: none;
      }

corewm-panel-item .Ghost {
  background-color : red !important;
  min-width : 16px;
}

.corewm-panel-dummy {
  min-width : 16px;
  min-height : 16px;
}
.corewm-panel-ellipsis span {
  display : inline-block;
  overflow : hidden;
  white-space : nowrap;
  text-overflow: ellipsis;
  -o-text-overflow: ellipsis;
}

/**
 * ===========================================================================
 *                                 SEARCH
 * ===========================================================================
 */

corewm-search {
  position : absolute;
  display : none;
  z-index : 99999;
  max-width : 400px;
}
corewm-search:before {
  position : absolute;
  top : 0;
  left : 0;
  bottom : 0;
  right : 0;
  z-index : -1;
}
corewm-search[data-visible=true] {
  display : block;
}
  corewm-search > div {
    margin-top : 5px;
  }
  corewm-search gui-text {
    width : 100%;
  }

  corewm-search > ul {
    list-style-type : none;
    margin : 0;
    padding : 0;
  }
    corewm-search > ul > li {
      position : relative;
      margin : 0;
      padding : 0;
    }
      corewm-search > ul > li > * {
        pointer-events : none;
      }
      corewm-search > ul > li > img {
        position : absolute;
        top : 5px;
        left : 5px;
      }

/**
 * ===========================================================================
 *                               RESPONSIVE
 * ===========================================================================
 */

@media all and (max-width: 800px) {

  corewm-panel > corewm-panel-container > corewm-panel-item .corewm-panel-buttons > li span {
    display: none;
  }

  #CoreWMApplicationMenu {
    overflow : auto;
    text-align : center;
  }

}

/**
 * ===========================================================================
 *                               PANEL ITEMS
 * ===========================================================================
 */

corewm-panel .PanelItemClock {
  flex : 0 0 55px;
}
corewm-panel .PanelItemClock li {
  cursor : default;
}

corewm-panel[data-orientation="horizontal"] .PanelItemWindowList li {
  -webkit-flex: 0 0 auto;
     -moz-flex: 0 0 auto;
      -ms-flex: 0 0 auto;
       -o-flex: 0 0 auto;
          flex: 0 0 auto;
}
corewm-panel[data-orientation="vertical"] .PanelItemWindowList li {
  -ms-flex-align: flex-start;

  -webkit-align-items: flex-start;
     -moz-align-items: flex-start;
          align-items: flex-start;
}

corewm-panel[data-orientation="vertical"] .PanelItemWindowList li > img {
  transform : rotate(90deg);
}
corewm-panel[data-orientation="vertical"] .PanelItemWindowList li > span {
  position: absolute;
  left: .5em;
  top: 20px;
  transform-origin: left;
}

corewm-panel .PanelItemNotificationArea .BusyNotification > div,
corewm-panel .PanelItemNotificationArea .StartupNotification > div {
  cursor : help;
  width : 20px;
}

corewm-panel .PanelItemNotificationArea .BusyNotification > div > div,
corewm-panel .PanelItemNotificationArea .StartupNotification > div > div {
  border: 2px solid #fff;
  border-radius: 100%;
  margin-left : -10px;
  margin-top : -10px;
  position : absolute;
  top : 50%;
  left : 50%;
  width : 20px;
  height : 20px;
  box-sizing : border-box;
}
/* ... */

